--- a/src/data/festival/artists.toml
+++ b/src/data/festival/artists.toml
@@ -153,7 +153,7 @@ description = "A street band made up of people from all around Santa Barbara Cou
 [brasscheeks]
 name = "Brass Cheeks"
 hometown = "Seattle, WA"
-infoUrl = "https://www.facebook.com/profile.php?id=61554147362162"
+infoUrl = "https://www.instagram.com/brasscheeks"
 description = "Brass Cheeks is a 9-piece brass band specializing in funk, soul, pop, and seasonal covers of your favorite songs. The group is comprised of musicians who have their roots in Seattle’s premiere marching bands including Soundwave, Red Alert, Blue Thunder, and Husky Marching Band."
 [brasscheeks.image]
 src = "https://ik.imagekit.io/honkfestwest/bands/brasscheeks_PvlLUFd-Y.jpg?updatedAt=1747153111352"
